@@ -51,6 +51,15 @@ ECL 0.9l-p1:
    before loading. Instead, it leaves this task to the appropriate routine,
    dlopen or similar.
 
+ - Bytecode objects created inside an eval-when had an invalid name.
+
+ - SI:LOAD-FOREIGN-MODULE now relies on dlopen/LibraryLoad/... to find the
+   foreign libraries. Nevertheless, duplicate libraries are still identified
+	> (si:load-foreign-module "libm.dylib")
+	#<codeblock "/Users/jjgarcia/src/ecl/build/libm.dylib">
+	> (si:load-foreign-module "/usr/lib/libm.dylib")
+	#<codeblock "/Users/jjgarcia/src/ecl/build/libm.dylib">
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
